# kcc

src/store/clucene.0.9.10/: CLucene.h  Makefile.am  Makefile.in
src/store/clucene.0.9.10/CLucene/: CLBackwards.h  CLConfig.h  CLMonolithic.cpp  LuceneThreads.h  Makefile.am  StdHeader.cpp  StdHeader.h  clucene-config.h
src/store/clucene.0.9.10/CLucene/analysis/: AnalysisHeader.cpp  AnalysisHeader.h  Analyzers.cpp  Analyzers.h  PorterStemmer.h
src/store/clucene.0.9.10/CLucene/config/: CompilerGcc.h  CompilerMsvc.h  Makefile.am  PlatformMac.h  PlatformUnix.h  PlatformWin32.h  compiler.h  define_std.h  gunichartables.cpp  repl_tchar.h  repl_wchar.cpp  repl_wchar.h  repl_wcs.cpp
src/store/clucene.0.9.10/CLucene/debug/: condition.cpp  condition.h  error.cpp  error.h  lucenebase.h  mem.h  mempool.cpp  memtracking.cpp  pool.h
src/store/clucene.0.9.10/CLucene/document/: DateField.cpp  DateField.h  Document.cpp  Document.h  Field.cpp  Field.h
src/store/clucene.0.9.10/CLucene/index/: CompoundFile.cpp  CompoundFile.h  DocumentWriter.cpp  DocumentWriter.h  FieldInfo.h  FieldInfos.cpp  FieldInfos.h  FieldsReader.cpp  FieldsReader.h  FieldsWriter.cpp  FieldsWriter.h  IndexReader.cpp  IndexReader.h  IndexWriter.cpp  IndexWriter.h  Makefile.am  MultiReader.cpp  MultiReader.h  SegmentHeader.h  SegmentInfos.cpp  SegmentInfos.h  SegmentMergeInfo.cpp  SegmentMergeInfo.h  SegmentMergeQueue.cpp  SegmentMergeQueue.h  SegmentMerger.cpp  SegmentMerger.h  SegmentReader.cpp  SegmentTermDocs.cpp  SegmentTermEnum.cpp  SegmentTermEnum.h  SegmentTermPositions.cpp  SegmentTermVector.cpp  Term.cpp  Term.h  TermInfo.cpp  TermInfo.h  TermInfosReader.cpp  TermInfosReader.h  TermInfosWriter.cpp  (+5 more)
src/store/clucene.0.9.10/CLucene/queryParser/: Lexer.cpp  Lexer.h  MultiFieldQueryParser.cpp  MultiFieldQueryParser.h  QueryParser.cpp  QueryParser.h  QueryParserBase.cpp  QueryParserBase.h  QueryParserConstants.h  QueryToken.cpp  QueryToken.h  TokenList.cpp  TokenList.h
src/store/clucene.0.9.10/CLucene/search/: BooleanClause.h  BooleanQuery.cpp  BooleanQuery.h  BooleanScorer.cpp  BooleanScorer.h  Compare.h  ConjunctionScorer.cpp  ConjunctionScorer.h  DateFilter.cpp  DateFilter.h  ExactPhraseScorer.cpp  ExactPhraseScorer.h  Explanation.cpp  Explanation.h  FieldCache.cpp  FieldCache.h  FieldCacheImpl.cpp  FieldCacheImpl.h  FieldDoc.h  FieldDocSortedHitQueue.cpp  FieldDocSortedHitQueue.h  FieldSortedHitQueue.cpp  FieldSortedHitQueue.h  Filter.h  FilteredTermEnum.cpp  (+42 more)
src/store/clucene.0.9.10/demo/: DeleteFiles.cpp  IndexFiles.cpp  Main.cpp  Makefile.am  Makefile.in  SearchFiles.cpp  Statistics.cpp
(+392 files in other folders)
