## Makefile.am -- Process this file with automake to produce Makefile.in
configdir = $(lsrcdir)/config
confighdir = $(includedir)/CLucene/config
 
libclucene_la_SOURCES  += $(configdir)/repl_wcs.cpp 
libclucene_la_SOURCES  += $(configdir)/gunichartables.cpp 
libclucene_la_SOURCES  += $(configdir)/repl_wchar.cpp

configh_HEADERS = $(configdir)/*.h
