## Makefile.am -- Process this file with automake to produce Makefile.in
utildir = $(lsrcdir)/util
utilhdir = $(includedir)/CLucene/util
 
libclucene_la_SOURCES        += $(utildir)/Arrays.cpp
libclucene_la_SOURCES        += $(utildir)/BitVector.cpp
libclucene_la_SOURCES        += $(utildir)/dirent.cpp
libclucene_la_SOURCES        += $(utildir)/FastCharStream.cpp
libclucene_la_SOURCES        += $(utildir)/MD5Digester.cpp
libclucene_la_SOURCES        += $(utildir)/Misc.cpp
libclucene_la_SOURCES        += $(utildir)/Reader.cpp
libclucene_la_SOURCES        += $(utildir)/StringBuffer.cpp
libclucene_la_SOURCES        += $(utildir)/StringIntern.cpp

utilh_HEADERS	=  $(utildir)/*.h
